--- a/current/Makefile
+++ b/current/Makefile
@@ -1,9 +1,9 @@
 CFLAGS=-Wall -g
 
 clean:
-	rm -r ex15 ex16 *.dSYM pointer_test
+	rm -r ex15 ex16 *.dSYM pointer_test test
 
 all:
-	make pointer_test
+	make pointer_test test
 
 
