--- a/current/Makefile
+++ b/current/Makefile
@@ -4,6 +4,6 @@ clean:
 	rm -r ex15 ex16 *.dSYM pointer_test test bit-test set_word
 
 all:
-	make ex16 pointer_test test bit-test set_word
+	make ex15 ex16 pointer_test test bit-test set_word
 
 
